--- a/app/src/main/res/layout/fragment_loup.xml
+++ b/app/src/main/res/layout/fragment_loup.xml
@@ -13,27 +13,32 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/loupRecyclerView" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="100dp"/>
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="100dp" app:layout_constraintHorizontal_bias="0.5"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/loupRecyclerView"
+            android:background="@color/transparentBackground"/>
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
-            android:layout_height="517dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_height="494dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:id="@+id/loupRecyclerView"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"/>
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="92dp"
+            app:layout_constraintTop_toBottomOf="@+id/wolfieTiming" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.888"/>
     <TextView
             android:text="@string/_10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/wolfieTiming" android:textSize="80sp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/loupRecyclerView"
-            app:layout_constraintStart_toEndOf="@+id/wolfies" android:layout_marginStart="8dp"
-            android:textColor="@color/blanc_casse"/>
+            android:layout_width="62dp"
+            android:layout_height="53dp"
+            android:id="@+id/wolfieTiming" android:textSize="36sp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/blanc_casse" android:textStyle="bold"
+            android:background="@drawable/pseudoshape"
+            android:textAlignment="center"
+            android:shadowColor="@color/colorPrimaryDark"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="5"
+            android:layout_marginTop="16dp"/>
 </android.support.constraint.ConstraintLayout>
