--- a/app/src/main/res/layout/fragment_sorciere_mort.xml
+++ b/app/src/main/res/layout/fragment_sorciere_mort.xml
@@ -4,15 +4,39 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             tools:context=".SorciereMortFragment" android:id="@+id/frameLayout2">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+                                             tools:context=".SorciereMortFragment"
+                                             android:id="@+id/sorciereMortLayout">
+    <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:text="@string/hello_blank_fragment"
-            android:id="@+id/textView6" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:id="@+id/sorciereRecyclerView" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/deathPotionChoiceText" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/nobodyText"/>
+    <Button
+            android:text="Personne ne doit mourir"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/nobodyText"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+            android:text="Qui doit mourir ?"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/deathPotionChoiceText" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp" android:textSize="30sp"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/invisibleText" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:visibility="invisible" android:textSize="30sp"/>
 </android.support.constraint.ConstraintLayout>
