--- a/app/src/main/res/layout/fragment_print_dead.xml
+++ b/app/src/main/res/layout/fragment_print_dead.xml
@@ -1,14 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".PrintDeadFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             tools:context=".PrintDeadFragment"
+                                             android:background="@drawable/background3">
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
-
-</FrameLayout>
+            android:text="@string/_10"
+            android:layout_width="62dp"
+            android:layout_height="53dp"
+            android:id="@+id/deadTimer" android:textSize="36sp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/blanc_casse" android:textStyle="bold"
+            android:background="@drawable/pseudoshape"
+            android:textAlignment="center"
+            android:shadowColor="@color/colorPrimaryDark"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="5"
+            android:layout_marginTop="16dp"/>
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="618dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:id="@+id/deadRecyclerView"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/deadTimer"/>
+    <TextView
+            android:text="@string/liste_des_morts"
+            android:layout_width="296dp"
+            android:layout_height="42dp"
+            android:id="@+id/textView4" android:textSize="30sp"
+            android:textStyle="bold" android:textColor="@color/blanc_casse"
+            android:shadowColor="@color/colorPrimaryDark"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textAlignment="textStart"
+            android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="@+id/deadTimer"
+            app:layout_constraintBottom_toBottomOf="@+id/deadTimer"/>
+</android.support.constraint.ConstraintLayout>
