--- a/app/src/main/res/layout/dead_vote_view_row.xml
+++ b/app/src/main/res/layout/dead_vote_view_row.xml
@@ -42,13 +42,25 @@
                     android:gravity="center"
                     android:text="@string/pseudo"
                     android:textSize="14sp"
-                    android:layout_marginTop="8dp"
                     android:background="@drawable/pseudoshape"
                     android:textAllCaps="false"
                     app:layout_constraintTop_toBottomOf="@+id/avatarPlayerDead"
                     app:layout_constraintStart_toStartOf="@+id/avatarPlayerDead" android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="@+id/avatarPlayerDead"
-                    android:textColor="@color/colorAccent"/>
+                    android:textColor="@color/colorAccent" app:layout_constraintHorizontal_bias="0.0"/>
+            <Button
+                    android:id="@+id/rolePlayerDead"
+                    android:layout_width="0dp"
+                    android:layout_height="26dp"
+                    android:gravity="center"
+                    android:text="@string/pseudo"
+                    android:textSize="14sp"
+                    android:background="@drawable/pseudoselectedshape"
+                    android:textAllCaps="false"
+                    app:layout_constraintStart_toStartOf="@+id/avatarPlayerDead" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="@+id/avatarPlayerDead"
+                    android:textColor="@color/colorPrimaryDark" app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintTop_toBottomOf="@+id/pseudoPlayerDead"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
