--- a/app/src/main/res/layout/fragment_print_dead.xml
+++ b/app/src/main/res/layout/fragment_print_dead.xml
@@ -6,20 +6,6 @@
                                              android:layout_height="match_parent"
                                              tools:context=".PrintDeadFragment"
                                              android:background="@drawable/background3">
-    <TextView
-            android:text="@string/_10"
-            android:layout_width="62dp"
-            android:layout_height="53dp"
-            android:id="@+id/deadTimer" android:textSize="36sp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/blanc_casse" android:textStyle="bold"
-            android:background="@drawable/pseudoshape"
-            android:textAlignment="center"
-            android:shadowColor="@color/colorPrimaryDark"
-            android:shadowDx="2"
-            android:shadowDy="2"
-            android:shadowRadius="5"
-            android:layout_marginTop="16dp"/>
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="618dp"
@@ -28,7 +14,9 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:id="@+id/deadRecyclerView"
             app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/deadTimer"/>
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.185"/>
     <TextView
             android:text="@string/liste_des_morts"
             android:layout_width="296dp"
@@ -42,6 +30,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:textAlignment="textStart"
             android:layout_marginStart="16dp"
-            app:layout_constraintTop_toTopOf="@+id/deadTimer"
-            app:layout_constraintBottom_toBottomOf="@+id/deadTimer"/>
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="28dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.45"/>
 </android.support.constraint.ConstraintLayout>
