--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -17,10 +17,10 @@
             app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
             android:layout_marginTop="128dp"/>
     <TextView
-            android:text="Parties à rejoindre"
+            android:text="Parties à rejoindre :"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView6" android:textSize="36sp"
+            android:id="@+id/titleJoin" android:textSize="36sp"
             android:textStyle="bold" android:textColor="@color/blanc_casse" android:layout_marginBottom="43dp"
             app:layout_constraintBottom_toTopOf="@+id/lobbyView" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
