--- a/app/src/main/res/layout/fragment_chasseur.xml
+++ b/app/src/main/res/layout/fragment_chasseur.xml
@@ -33,7 +33,7 @@
             android:text="@string/selectionnez_un_joueur"
             android:layout_width="296dp"
             android:layout_height="42dp"
-            android:id="@+id/textView4" android:textSize="24sp"
+            android:textSize="24sp"
             android:textStyle="bold" android:textColor="@color/blanc_casse"
             android:shadowColor="@color/colorPrimaryDark"
             android:shadowDx="2"
@@ -43,5 +43,5 @@
             android:textAlignment="textStart"
             android:layout_marginStart="16dp"
             app:layout_constraintTop_toTopOf="@+id/chasseurTimer"
-            app:layout_constraintBottom_toBottomOf="@+id/chasseurTimer"/>
+            app:layout_constraintBottom_toBottomOf="@+id/chasseurTimer" android:id="@+id/chasseurTextView"/>
 </android.support.constraint.ConstraintLayout>
