--- a/app/src/main/res/layout/fragment_cupidon.xml
+++ b/app/src/main/res/layout/fragment_cupidon.xml
@@ -30,14 +30,14 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:id="@+id/cupidonRecyclerView"
             app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/cupidonTextView"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
             android:text="@string/selectionner_deux_joueurs"
             android:layout_width="351dp"
             android:layout_height="42dp"
-            android:id="@+id/textView4" android:textSize="28sp"
+            android:id="@+id/cupidonTextView" android:textSize="28sp"
             android:textStyle="bold" android:textColor="@color/blanc_casse"
             android:shadowColor="@color/colorPrimaryDark"
             android:shadowDx="2"
