--- a/app/src/main/res/layout/fragment_fin_jeu.xml
+++ b/app/src/main/res/layout/fragment_fin_jeu.xml
@@ -1,40 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-             tools:context=".FinJeuFragment"
-             android:background="#581305">
-    <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView7" tools:text="nom de la carte"
-                android:textAlignment="center" android:textColor="@color/colorBlanc" android:textSize="46sp"
-                app:layout_constraintStart_toStartOf="@+id/victoryCard"
-                app:layout_constraintEnd_toEndOf="@+id/victoryCard"
-                app:layout_constraintHorizontal_bias="0.475"
-                android:layout_marginEnd="8dp" android:layout_marginTop="80dp"
-                app:layout_constraintTop_toBottomOf="@+id/victoryCard" android:text="@string/nom_de_la_carte"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView5" tools:text="Le gagnant \n est ..."
-                android:textAlignment="center" android:textColor="@color/colorBlanc" android:textSize="46sp"
-                android:layout_marginTop="32dp"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="44dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="44dp" app:layout_constraintHorizontal_bias="0.5"
-                android:text="@string/le_gagnant_n_est"/>
-        <ImageView
-                android:layout_width="209dp"
-                android:layout_height="216dp" app:srcCompat="@drawable/loup_garou_launcher"
-                android:id="@+id/victoryCard"
-                app:layout_constraintEnd_toEndOf="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView5"
-                android:layout_marginTop="59dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
-    </android.support.constraint.ConstraintLayout>
-
-</FrameLayout>
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             tools:context=".FinJeuFragment"
+                                             android:id="@+id/backgroundFin"
+                                             android:background="@drawable/background3">
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="527dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:id="@+id/finRecyclerView"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/roleMessage2Fin"
+            app:layout_constraintVertical_bias="0.333"/>
+    <TextView
+            android:text="role"
+            android:layout_width="296dp"
+            android:layout_height="51dp"
+            android:id="@+id/roleMessageFin" android:textSize="36sp"
+            android:textStyle="bold" android:textColor="@color/blanc_casse"
+            android:shadowColor="@color/colorPrimaryDark"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textAlignment="center"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.45"/>
+    <TextView
+            android:text=" ont gagné !"
+            android:layout_width="296dp"
+            android:layout_height="42dp"
+            android:id="@+id/roleMessage2Fin" android:textSize="30sp"
+            android:textStyle="bold" android:textColor="@color/blanc_casse"
+            android:shadowColor="@color/colorPrimaryDark"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textAlignment="center"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.45"
+            app:layout_constraintTop_toBottomOf="@+id/roleMessageFin"/>
+</android.support.constraint.ConstraintLayout>
