--- a/app/src/main/res/layout/fragment_print_dead.xml
+++ b/app/src/main/res/layout/fragment_print_dead.xml
@@ -14,14 +14,14 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:id="@+id/deadRecyclerView"
             app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/deadTextView"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.185"/>
     <TextView
             android:text="@string/liste_des_morts"
             android:layout_width="296dp"
             android:layout_height="42dp"
-            android:id="@+id/textView4" android:textSize="30sp"
+            android:id="@+id/deadTextView" android:textSize="30sp"
             android:textStyle="bold" android:textColor="@color/blanc_casse"
             android:shadowColor="@color/colorPrimaryDark"
             android:shadowDx="2"
