--- a/app/src/main/res/layout/fragment_voyante.xml
+++ b/app/src/main/res/layout/fragment_voyante.xml
@@ -33,7 +33,7 @@
             android:text="@string/selectionnez_un_joueur"
             android:layout_width="296dp"
             android:layout_height="42dp"
-            android:id="@+id/textView4" android:textSize="24sp"
+            android:id="@+id/voyanteTextView" android:textSize="24sp"
             android:textStyle="bold" android:textColor="@color/blanc_casse"
             android:shadowColor="@color/colorPrimaryDark"
             android:shadowDx="2"
