condition create si partie en cours

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
             android:background="@drawable/buttonshape"
             android:textColor="@color/blanc_casse" android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/signButton" app:layout_constraintEnd_toEndOf="@+id/signButton"
-            android:layout_marginBottom="52dp" app:layout_constraintBottom_toTopOf="@+id/signButton"
+            android:layout_marginBottom="48dp" app:layout_constraintBottom_toTopOf="@+id/signButton"
             app:layout_constraintHorizontal_bias="0.0"/>
     <Button
             android:text="@string/sign_up"
@@ -26,9 +26,9 @@
             android:textSize="18sp"
             android:background="@drawable/buttonshape"
             android:textColor="@color/blanc_casse" android:textStyle="bold"
-            android:layout_marginBottom="96dp"
+            android:layout_marginBottom="192dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.502" app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"/>
     <ImageButton
             android:layout_width="80dp"
             android:layout_height="60dp" app:srcCompat="@android:drawable/ic_menu_revert"
@@ -38,7 +38,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="0.0"
-            android:background="@color/colorBackground" android:scaleType="fitCenter"
+            android:background="@color/transparentBackground" android:scaleType="fitCenter"
             android:contentDescription="@string/bouton_retour"/>
     <TextView
             android:layout_width="wrap_content"
