--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -10,12 +10,12 @@
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
-            android:layout_height="533dp"
+            android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:id="@+id/playerView"
             app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="60dp" app:layout_constraintTop_toTopOf="parent"
-    />
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/partyNameLobby"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/startGame"/>
     <Button
             android:text="@string/commencer"
             android:layout_width="wrap_content"
@@ -34,5 +34,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="28dp" app:layout_constraintHorizontal_bias="0.497"
     />
+    <TextView
+            android:layout_width="381dp"
+            android:layout_height="44dp"
+            android:id="@+id/partyNameLobby" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="30sp" android:textStyle="bold" android:textColor="@color/blanc_casse"
+            android:textAlignment="center" android:layout_marginTop="16dp"/>
 
 </android.support.constraint.ConstraintLayout>
