--- a/app/src/main/res/layout/fragment_player_view_row.xml
+++ b/app/src/main/res/layout/fragment_player_view_row.xml
@@ -10,7 +10,7 @@
                                              android:layout_marginRight="10dp"
                                              android:layout_marginTop="2dp">
     <TextView
-            android:layout_width="228dp"
+            android:layout_width="172dp"
             android:layout_height="wrap_content"
             android:text="@string/coucou" android:id="@+id/lobbyPseudoText"
             android:textSize="24sp"
@@ -18,7 +18,7 @@
             android:textAlignment="textStart" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0"
-            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toEndOf="@+id/imageMaster" android:layout_marginStart="8dp"/>
     <Button
             android:text="@string/exclure"
             android:layout_width="117dp"
@@ -28,5 +28,11 @@
             android:background="@drawable/buttonshapekick" android:textColor="@color/blanc_casse"
             android:textAlignment="center" android:textStyle="bold"
             android:layout_marginTop="8dp"/>
+    <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:id="@+id/imageMaster" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
