--- a/app/src/main/res/layout/fragment_cupidon.xml
+++ b/app/src/main/res/layout/fragment_cupidon.xml
@@ -5,7 +5,7 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              tools:context=".CupidonFragment"
-                                             android:background="@drawable/background3">
+                                             android:background="@drawable/background_cupidon_motif">
 
     <TextView
             android:text="15"
@@ -34,10 +34,10 @@
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
-            android:text="@string/selectionner_deux_joueurs"
+            android:text="@string/selectionnez_deux_amoureux"
             android:layout_width="351dp"
             android:layout_height="42dp"
-            android:id="@+id/cupidonTextView" android:textSize="28sp"
+            android:id="@+id/cupidonTextView" android:textSize="25sp"
             android:textStyle="bold" android:textColor="@color/blanc_casse"
             android:shadowColor="@color/colorPrimaryDark"
             android:shadowDx="2"
