--- a/app/src/main/res/layout/fragment_vote_jour.xml
+++ b/app/src/main/res/layout/fragment_vote_jour.xml
@@ -5,7 +5,7 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              tools:context=".LoupFragment"
-                                             android:background="@drawable/background3">
+                                             android:background="@drawable/background_villageois_motif">
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="517dp"
