--- a/app/src/main/res/layout/fragment_sorciere_mort.xml
+++ b/app/src/main/res/layout/fragment_sorciere_mort.xml
@@ -6,6 +6,15 @@
                                              android:layout_height="match_parent"
                                              tools:context=".SorciereMortFragment"
                                              android:id="@+id/sorciereMortLayout">
+    <TextView
+            android:text="@string/_10"
+            android:layout_width="62dp"
+            android:layout_height="53dp"
+            android:id="@+id/sorciereMortCompteur"
+            android:textSize="36sp" android:textColor="@color/blanc_casse" android:textStyle="bold"
+            android:background="@drawable/pseudoshape"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -23,14 +32,16 @@
             android:id="@+id/nobodyText"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/blanc_casse"
+            android:background="@drawable/buttonshape"/>
     <TextView
             android:text="Qui doit mourir ?"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/deathPotionChoiceText" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp" android:textSize="30sp"/>
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp" android:textSize="30sp"
+            android:textColor="@color/blanc_casse"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
