--- a/app/src/main/res/layout/fragment_sorciere_vie.xml
+++ b/app/src/main/res/layout/fragment_sorciere_vie.xml
@@ -57,4 +57,13 @@
             app:layout_constraintStart_toStartOf="@+id/whoIsDeadText" android:textSize="24sp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/whoIsDeadText"
             android:textColor="@color/blanc_casse"/>
+    <TextView
+            android:text="@string/_10"
+            android:layout_width="62dp"
+            android:layout_height="53dp"
+            android:id="@+id/sorciereVieCompteur"
+            android:textSize="36sp" android:textColor="@color/blanc_casse" android:textStyle="bold"
+            android:background="@drawable/pseudoshape"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
 </android.support.constraint.ConstraintLayout>
