--- a/app/src/main/res/layout/fragment_sorciere_mort.xml
+++ b/app/src/main/res/layout/fragment_sorciere_mort.xml
@@ -5,7 +5,8 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              tools:context=".SorciereMortFragment"
-                                             android:id="@+id/sorciereMortLayout">
+                                             android:id="@+id/sorciereMortLayout"
+                                             android:background="@drawable/background_sorciere_motif">
     <TextView
             android:text="@string/_10"
             android:layout_width="62dp"
