--- a/app/src/main/res/layout/fragment_sorciere_vie.xml
+++ b/app/src/main/res/layout/fragment_sorciere_vie.xml
@@ -4,7 +4,8 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             tools:context=".SorciereVieFragment" android:id="@+id/sorciereVieLayout">
+                                             tools:context=".SorciereVieFragment" android:id="@+id/sorciereVieLayout"
+                                             android:background="@drawable/background_sorciere_motif">
     <TextView
             android:text="Pseudo"
             android:layout_width="wrap_content"
@@ -41,14 +42,17 @@
             app:layout_constraintStart_toStartOf="@+id/ResurrectButton"
             app:layout_constraintEnd_toEndOf="@+id/ResurrectButton" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/ResurrectButton"/>
-    <ImageView
+    <com.mikhaellopez.circularimageview.CircularImageView
             android:src="@drawable/icon_avatar"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:id="@+id/deadFace" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.19"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.19"
+            app:civ_border_color="@color/blanc_casse"
+            app:civ_border_width="4dp"
+            app:srcCompat="@drawable/icon_avatar"/>
     <TextView
             android:text="est mort"
             android:layout_width="wrap_content"
