--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -6,7 +6,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".LauncherActivity" android:id="@+id/launcherLayout"
-        android:background="@drawable/background3">
+        android:background="@drawable/background3"
+>
 
     <TextView
             android:text="@string/touchez_pour_commencer"
