--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".LoginActivity" android:id="@+id/loginLayout"
-        android:background="@drawable/background3">
+        android:background="@drawable/background3"
+>
     <Button
             android:text="@string/sign_in"
             android:layout_width="wrap_content"
