--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -47,8 +47,7 @@
             android:background="@drawable/edittextshape"
             android:layout_width="wrap_content" android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/textView3"
-            android:layout_marginTop="76dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
-    />
+            android:layout_marginTop="76dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
     <TextView
             android:layout_width="49dp"
             android:layout_height="48dp"
@@ -76,7 +75,7 @@
             app:layout_constraintTop_toTopOf="@+id/nbPlayerView"
             app:layout_constraintBottom_toBottomOf="@+id/nbPlayerView"
             app:layout_constraintStart_toEndOf="@+id/nbPlayerView" app:layout_constraintVertical_bias="0.0"
-    />
+            android:contentDescription="@string/bouton_ajouter"/>
     <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" app:srcCompat="@drawable/minus_icon"
@@ -84,5 +83,5 @@
             android:background="@color/transparentBackground"
             app:layout_constraintTop_toTopOf="@+id/nbPlayerView"
             app:layout_constraintBottom_toBottomOf="@+id/nbPlayerView" app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintEnd_toStartOf="@+id/nbPlayerView"/>
+            app:layout_constraintEnd_toStartOf="@+id/nbPlayerView" android:contentDescription="@string/bouton_supprimer"/>
 </android.support.constraint.ConstraintLayout>
