--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -56,7 +56,7 @@
             android:id="@+id/imageView4" android:layout_marginBottom="52dp"
             app:layout_constraintBottom_toTopOf="@+id/createButton"
             app:layout_constraintStart_toStartOf="@+id/createButton"
-            app:layout_constraintEnd_toEndOf="@+id/createButton"/>
+            app:layout_constraintEnd_toEndOf="@+id/createButton" android:contentDescription="@string/bouton_creer"/>
     <ImageButton
             android:layout_width="49dp"
             android:layout_height="48dp" app:srcCompat="@drawable/tuto_icon"
@@ -64,5 +64,6 @@
             android:background="@color/transparentBackground"
             app:layout_constraintTop_toBottomOf="@+id/settingButton"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="@+id/settingButton" android:layout_marginStart="8dp"/>
+            app:layout_constraintStart_toStartOf="@+id/settingButton" android:layout_marginStart="8dp"
+            android:contentDescription="@string/bouton_regles"/>
 </android.support.constraint.ConstraintLayout>
