--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -17,7 +17,7 @@
             app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
             android:layout_marginTop="128dp"/>
     <TextView
-            android:text="Parties à rejoindre :"
+            android:text="@string/parties_rejoindre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/titleJoin" android:textSize="36sp"
