--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -55,12 +55,14 @@
             android:id="@+id/imageView"
             app:layout_constraintTop_toTopOf="@+id/emailContainerUp"
             app:layout_constraintBottom_toBottomOf="@+id/emailContainerUp"
-            app:layout_constraintStart_toStartOf="@+id/emailContainerUp" android:layout_marginStart="8dp"/>
+            app:layout_constraintStart_toStartOf="@+id/emailContainerUp" android:layout_marginStart="8dp"
+            android:contentDescription="@string/petite_enveloppe"/>
     <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_lock_idle_lock"
             android:id="@+id/imageView2"
             app:layout_constraintTop_toTopOf="@+id/passwordContainerUp"
             app:layout_constraintBottom_toBottomOf="@+id/passwordContainerUp"
-            app:layout_constraintStart_toStartOf="@+id/passwordContainerUp" android:layout_marginStart="8dp"/>
+            app:layout_constraintStart_toStartOf="@+id/passwordContainerUp" android:layout_marginStart="8dp"
+            android:contentDescription="@string/petit_cadenas"/>
 </android.support.constraint.ConstraintLayout>
