--- a/app/src/main/res/layout/activity_user_settings.xml
+++ b/app/src/main/res/layout/activity_user_settings.xml
@@ -68,5 +68,6 @@
             android:background="@color/transparentBackground" android:tint="@android:color/white"
             app:layout_constraintTop_toTopOf="@+id/pseudoText" app:layout_constraintBottom_toBottomOf="@+id/pseudoText"
             app:layout_constraintVertical_bias="1.0"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/pseudoText"/>
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/pseudoText"
+            android:contentDescription="@string/petit_crayon"/>
 </android.support.constraint.ConstraintLayout>
