--- a/app/src/main/res/layout/dead_vote_view_row.xml
+++ b/app/src/main/res/layout/dead_vote_view_row.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="wrap_content"
                                              android:layout_height="wrap_content">
 
@@ -67,7 +66,7 @@
                     android:id="@+id/loveIcon"
                     app:layout_constraintEnd_toEndOf="@+id/pseudoPlayerDead"
                     android:layout_marginEnd="8dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/avatarPlayerDead"/>
+                    app:layout_constraintBottom_toBottomOf="@+id/avatarPlayerDead" android:contentDescription="@string/petit_coeur"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
