--- a/app/src/main/res/layout/fragment_pipoteur.xml
+++ b/app/src/main/res/layout/fragment_pipoteur.xml
@@ -8,7 +8,7 @@
                                              android:background="@drawable/background_pipoteur_motif">
 
     <TextView
-            android:text="15"
+            android:text="@string/_15"
             android:layout_width="62dp"
             android:layout_height="53dp"
             android:id="@+id/pipoteurTimer" android:textSize="36sp"
