--- a/app/src/main/res/layout/fragment_player_view_row.xml
+++ b/app/src/main/res/layout/fragment_player_view_row.xml
@@ -33,6 +33,7 @@
             android:layout_height="32dp"
             android:id="@+id/imageMaster" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="@string/imagemaster"/>
 
 </android.support.constraint.ConstraintLayout>
