--- a/app/src/main/res/layout/fragment_print_dead.xml
+++ b/app/src/main/res/layout/fragment_print_dead.xml
@@ -34,7 +34,7 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="28dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.45"/>
     <Button
-            android:text="Accueil"
+            android:text="@string/accueil"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/goToHome"
