--- a/app/src/main/res/layout/fragment_sorciere_mort.xml
+++ b/app/src/main/res/layout/fragment_sorciere_mort.xml
@@ -27,7 +27,7 @@
             app:layout_constraintTop_toBottomOf="@+id/deathPotionChoiceText" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/nobodyText"/>
     <Button
-            android:text="Personne ne doit mourir"
+            android:text="@string/personne_ne_doit_mourir"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/nobodyText"
@@ -36,7 +36,7 @@
             app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/blanc_casse"
             android:background="@drawable/buttonshape"/>
     <TextView
-            android:text="Qui doit mourir ?"
+            android:text="@string/qui_doit_mourir"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/deathPotionChoiceText" app:layout_constraintStart_toStartOf="parent"
