--- a/app/src/main/res/layout/fragment_sorciere_vie.xml
+++ b/app/src/main/res/layout/fragment_sorciere_vie.xml
@@ -7,7 +7,7 @@
                                              tools:context=".SorciereVieFragment" android:id="@+id/sorciereVieLayout"
                                              android:background="@drawable/background_sorciere_motif">
     <TextView
-            android:text="Pseudo"
+            android:text="@string/pseudo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/whoIsDeadText" android:textSize="30sp" app:layout_constraintEnd_toEndOf="@+id/deadFace"
@@ -15,7 +15,7 @@
             app:layout_constraintTop_toBottomOf="@+id/deadFace" android:textStyle="bold"
             android:textColor="@color/blanc_casse"/>
     <TextView
-            android:text="Veux tu sauver ce joueur ?"
+            android:text="@string/veux_tu_sauver_ce_joueur"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/choixSorciereMort"
@@ -24,7 +24,7 @@
             app:layout_constraintEnd_toEndOf="@+id/estMortText" android:layout_marginTop="70dp"
             app:layout_constraintTop_toBottomOf="@+id/estMortText" android:textColor="@color/blanc_casse"/>
     <Button
-            android:text="Oui"
+            android:text="@string/oui"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/ResurrectButton"
@@ -33,7 +33,7 @@
             app:layout_constraintEnd_toEndOf="@+id/choixSorciereMort" android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/choixSorciereMort" app:layout_constraintHorizontal_bias="0.608"/>
     <Button
-            android:text="Non"
+            android:text="@string/non"
             android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:id="@+id/letHimDieButton"
@@ -54,7 +54,7 @@
             app:civ_border_width="4dp"
             app:srcCompat="@drawable/icon_avatar"/>
     <TextView
-            android:text="est mort"
+            android:text="@string/est_mort"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/estMortText" app:layout_constraintEnd_toEndOf="@+id/whoIsDeadText"
