--- a/app/src/main/res/layout/layout_character.xml
+++ b/app/src/main/res/layout/layout_character.xml
@@ -30,5 +30,6 @@
             android:layout_height="216dp" app:srcCompat="@drawable/loup_garou_launcher"
             android:id="@+id/Cards"
             app:layout_constraintEnd_toEndOf="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView5"
-            android:layout_marginTop="59dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
+            android:layout_marginTop="59dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
+            android:contentDescription="@string/carte_joueur"/>
         </android.support.constraint.ConstraintLayout>
